<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">BixolonLabelPrinterSample</string>
    <string name="title_connecting">connecting&#8230;</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_connect_usb">Connect (USB)</string>
    <string name="menu_connect_wifi">Connect (Wi-Fi)</string>
    <string name="menu_connect_wifi_direct">Connect (Wi-Fi Direct)</string>
    <string name="menu_connect_bluetooth">Connect (Bluetooth)</string>
    <string name="menu_connect_bluetoothLE">Connect (BluetoothLE)</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="number9100">9100</string>
    <string name="ip_address">192.168.0.0</string>
    <string name="horizontal_position">Horizontal position</string>
    <string name="vertical_position">Vertical position</string>
    <string name="font_selection">Font selection</string>
    <string name="horizontal_multiplier">Horizontal multiplier</string>
    <string name="vertical_multiplier">Vertical multiplier</string>
    <string name="right_space">Right-side character spacing</string>
    <string name="rotation">Rotation</string>
    <string name="reverse">Reverse</string>
    <string name="bold">Bold</string>
    <string name="alignment_optional">Alignment (Optional)</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="multiplier_hint">1 ~ 4</string>
    <string name="no_rotation">No rotation</string>
    <string name="degrees_90">90 degrees</string>
    <string name="degrees_180">180 degrees</string>
    <string name="degrees_270">270 degrees</string>
    <string name="left_alignment">Left alignment</string>
    <string name="right_alignment">Right alignment</string>
    <string name="right_to_left">Right to left</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_draw_text">DrawTextActivity</string>
    <string name="slogan">BIXOLON Label Test.</string>
	 <string name="print">Print</string>
    <string name="none">None</string>
    <string name="font_12pt">12pt (9x30)</string>
    <string name="title_activity_draw_vector_text">DrawVectorTextActivity</string>
    <string name="font_width">Font width</string>
    <string name="font_height">Font height</string>
    <string name="italic">Italic</string>
    <string name="center_alignment">Center alignment</string>
    <string name="write_direction">Write direction</string>
    <string name="left_to_right">Left to right</string>
    <string name="ascii">ASCII (1 byte code)</string>
    <string name="title_activity_draw1d_barcode">Draw1dBarcodeActivity</string>
    <string name="barcode_selection">Barcode selection</string>
    <string name="narrow_bar_width">Narrow bar width</string>
    <string name="wide_bar_width">Wide bar width</string>
    <string name="barcode_height">Barcode height</string>
    <string name="hri">Human readable interpretation</string>
    <string name="not_printed">Not printed</string>
    <string name="quiet_zone_width_optional">Quiet zone width (optional)</string>
    <string name="code39">Code39</string>
    <string name="number2">2</string>
    <string name="number6">6</string>
    <string name="number100">100</string>
    <string name="barcode_data">1234567890</string>
    <string name="mode_selection">Mode selection</string>
    <string name="mode0">Mode0</string>
    <string name="mode2">Mode2</string>
    <string name="mode3">Mode3</string>
    <string name="mode4">Mode4</string>
    <string name="mode0_data">999,840,06810,7317,This is a test of mode 0 structured carrier message encoding. this is an 84 char msg</string>
    <string name="mode2_data">999,840,06810,7317,THIS IS A TEST OF BIXOLON LABEL PRINTER SRP770. MODE 2 ENCODING. THIS IS AN 84 CHAR.</string>
    <string name="mode3_data">999,056,B1050,7317,THIS IS A TEST OF BIXOLON LABEL PRINTER SRP770. MODE 3 ENCODING. THIS IS AN 84 CHAR.</string>
    <string name="mode4_data">THIS IS A 93 CHARACTER CODE SET A MESSAGE THAT FILLS A MODE 4, UNAPPENDED, MAXICODE SYMBOL&#8230;</string>
    <string name="title_activity_draw_pdf417">DrawPdf417Activity</string>
    <string name="title_activity_draw_qr_code">DrawQrCodeActivity</string>
    <string name="title_activity_draw_maxicode">DrawMaxicodeActivity</string>
    <string name="horizontal_margin">Horizontal margin</string>
    <string name="vertical_margin">Vertical margin</string>
    <string name="set_margin">Set margin</string>
    <string name="set_width">Set width</string>
    <string name="width">Width</string>
    <string name="set_length">Set length</string>
    <string name="label_length">Label length</string>
    <string name="gap_length">Gap length</string>
    <string name="media_type">Media type</string>
    <string name="gap">Gap</string>
    <string name="continuous">Continuous</string>
    <string name="black_mark">Black mark</string>
    <string name="offset_length">Offset length between gap</string>
    <string name="set_printing_type">Set printing type</string>
    <string name="maxicode">Maxicode</string>
    <string name="barcode_2d_data">BIXOLON Label Printer</string>
    <string name="model_selection">Model selection</string>
    <string name="model1">Model1</string>
    <string name="model2">Model2</string>
    <string name="ecc_level">ECC level</string>
    <string name="recovery_rate_7">Recovery rate 7%</string>
    <string name="recovery_rate_15">Recovery rate 15%</string>
    <string name="recovery_rate_25">Recovery rate 25%</string>
    <string name="recovery_rate_30">Recovery rate 30%</string>
    <string name="size">Size</string>
    <string name="maximum_row_count">Maximum row count</string>
    <string name="maximum_column_count">Maximum column count</string>
    <string name="number3">3</string>
    <string name="error_correction_level">Error correction level</string>
    <string name="ec_level_0">EC level 0 (EC codeword 2)</string>
    <string name="data_compression_method">Data compression method</string>
    <string name="data_type_text">Data type: Text\n(compression: 2 chracters per codeword)</string>
    <string name="data_type_numeric">Data type: Numeric\n(compression: 2.93 characters per codeword)</string>
    <string name="data_type_binary">Data type: Binary\n(compression: 1.2 bytes per codeword)</string>
    <string name="below_barcode">Below the barcode</string>
    <string name="barcode_origin_point">Barcode origin point</string>
    <string name="center_of_barcode">Center of barcode</string>
    <string name="upper_left_corner">Upper left corner of barcode (default)</string>
    <string name="module_width">Module width</string>
    <string name="bar_height">Bar height</string>
    <string name="number4">4</string>
    <string name="number9">9</string>
    <string name="number200">200</string>
    <string name="number750">750</string>
    <string name="number30">30</string>
    <string name="number5">5</string>
    <string name="pdf417_max_row_count_hint">3 ~ 90</string>
    <string name="pdf417_max_column_count_hint">1 ~ 30</string>
    <string name="number10">10</string>
    <string name="pdf417_module_width_hint">2 ~ 9</string>
    <string name="pdf417_bar_height_hint">4 ~ 99</string>
    <string name="qr_code_size_hint">1 ~ 9</string>
    <string name="data_matrix_size_hint">1 ~ 4</string>
    <string name="number50">50</string>
    <string name="number78">78</string>
    <string name="number196">196</string>
    <string name="title_activity_draw_data_matrix">DrawDataMatrixActivity</string>
    <string name="reverse_or_inverse">Reverse (or Inverse)</string>
    <string name="horizontal_start_position">Horizontal start position</string>
    <string name="horizontal_end_position">Horizontal end position</string>
    <string name="vertical_start_position">Vertical start position</string>
    <string name="vertical_end_position">Vertical end position</string>
    <string name="thickness">Thickness</string>
    <string name="type">Type</string>
    <string name="line_overwriting">Line overwriting</string>
    <string name="line_xor">Line exclusive OR</string>
    <string name="line_delete">Line delete</string>
    <string name="slope">Slope (a oblique line)</string>
    <string name="box">Box</string>
    <string name="number1000">1000</string>
    <string name="title_activity_draw_block">DrawBlockActivity</string>
    <string name="title_activity_draw_circle">DrawCircleActivity</string>
    <string name="circle_size_selection">Cricle size selection</string>
    <string name="multiplier">Multiplier</string>
    <string name="diameter5">Diameter 5 mm (40 dots x 40 dots)</string>
    <string name="diameter7">Diameter 7 mm (56 dots x 56 dots)</string>
    <string name="diameter9">Diameter 9 mm (72 dots x 72 dots)</string>
    <string name="diameter11">Diameter 11 mm (88 dots x 88 dots)</string>
    <string name="diameter13">Diameter 13 mm (104 dots x 104 dots)</string>
    <string name="diameter21">Diameter 21 mm (168 dots x 168 dots)</string>
    <string name="title_activity_character_set_selection">CharacterSetSelectionActivity</string>
    <string name="international_chracter_set">International\ncharacter set</string>
    <string name="code_pages">Code pages</string>
    <string name="usa">U.S.A</string>
    <string name="cp437">CP437 (U.S.A)</string>
    <string name="set">Set</string>
    <string name="set_density">Set density</string>
    <string name="density_level">Density level</string>
    <string name="density_hint">0 ~ 20</string>
    <string name="set_offset">Set offset</string>
    <string name="offset_hint">-100 ~ 100</string>
    <string name="auto_cutter_enable_disable">Auto-cutter enable/disable</string>
    <string name="cutting_action">Cutting action</string>
    <string name="enable_cutter">Enable cutter to act after printing is finished</string>
    <string name="disable">Disable</string>
    <string name="cutting_period">Cutting period</string>
    <string name="title_activity_draw_bitmap">DrawBitmapActivity</string>
    <string name="level">Level</string>
    <string name="dithering">Dithering</string>
    <string name="compress">Compress</string>
    <string name="gallery">Gallery</string>
    <string name="pdf">PDF File</string>
    <string name="number529">529</string>
    <string name="number576">576</string>
    <string name="number500">500</string>
    <string name="content_description">Content description</string>
    <string name="title_activity_direct_io">DirectIoActivity</string>
    <string name="command">Command</string>
    <string name="command_has_response">Command has response</string>
    <string name="execute">Execute</string>
    <string name="response_length">Response length</string>
    <string name="get_exammples">Get examples</string>
    <string name="set_back_feed_step">Back feeding step quantity</string>
    <string name="set_back_feed_option">Set Back-feed Option</string>
    <string name="enable_back_feed">Enable</string>
    <string name="number300">300</string>
    <string name="title_activity_draw_pdf">DrawPDFActivity</string>
    <string name="start_page_num">Start page number</string>
    <string name="end_page_num">End page number</string>

</resources>